[gd_scene load_steps=5 format=2]

[ext_resource path="res://Control/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/ResourceIndicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Trees/Tree.gd" type="Script" id=3]
[ext_resource path="res://Effects/ShakeSpriteEffect.tscn" type="PackedScene" id=4]

[node name="Tree" type="StaticBody2D" groups=[
"Persist",
]]
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="ResourceIndicator" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -10.8485
margin_top = -39.4442
margin_right = 11.1515
margin_bottom = -35.4442
value = 50.0
max_health = 100

[node name="TransTest" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]

[node name="ShakeSpriteEffect" parent="." instance=ExtResource( 4 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="TransTest" to="." method="_on_TransTest_area_entered"]
[connection signal="area_exited" from="TransTest" to="." method="_on_TransTest_area_exited"]
